--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CategoryFragment"
-    android:background="@color/white">
+    android:background="@color/alice_blue">
 
     <TextView
         android:id="@+id/tvChooseCategory"
