--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment"
-    android:background="@color/white">
+    android:background="@color/alice_blue">
 
     <TextView
         android:textColor="@color/black"
@@ -14,13 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Trivia Quiz"
-        android:textSize="64dp"
+        android:textSize="48dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textStyle="bold"/>
     <ImageView
+        android:layout_marginTop="16dp"
         android:id="@+id/ivQuizLogo"
         android:layout_width="320dp"
         android:layout_height="320dp"
@@ -34,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:paddingHorizontal="64dp"
         android:paddingVertical="16dp"
         app:layout_constraintStart_toStartOf="parent"
